# witness

./: .env.example  .gitignore  CLAUDE.md  DEBT.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/analysis/: assembly_tracker.py  c5_analysis.py  corp_intel.py  entity_resolver.py  hotzones.py  kill_graph.py  names.py  narrative.py  nexus.py  oracle.py  reputation.py  story_feed.py  streaks.py  subscriptions.py
backend/api/: app.py  auth.py  cycle5.py  error_tracker.py  events.py  rate_limit.py  reference.py  routes.py  tier_gate.py
backend/bot/: discord_bot.py
backend/core/: config.py  logger.py
backend/db/: database.py
backend/ingestion/: coordinates.py  poller.py  sui_graphql.py
backend/warden/: warden.py
contracts/: README.md  foundry.toml  mud.config.ts  package.json  tsconfig.json
contracts/sui/: Published.toml
docs/: ASSEMBLY_GUIDE.md  DEMO_SCRIPT.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  (+1 more)
scripts/: backfill.py  fix_system_names.py  seed_demo.py  seed_demo_runner.py
tests/: test_api.py  test_assembly_tracker.py  test_auth.py  test_bot.py  test_c5_analysis.py  test_commands.py  test_coordinates.py  test_corp_intel.py  test_database.py  test_entity_resolver.py  test_events.py  test_hotzones.py  test_narrative.py  test_nexus.py  test_oracle.py  test_poller.py  test_reputation.py  test_story_feed.py  test_subscriptions.py  test_sui_graphql.py  test_tier_gate.py
(+36 files in other folders)
