[project]
name = "watchtower"
version = "0.1.0"
description = "The Living Memory of EVE Frontier — chain archaeology, AI intelligence, locator agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AreteDriver" }]
keywords = ["eve-frontier", "blockchain", "intelligence", "hackathon"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "discord.py>=2.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "rich>=13.9.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
